--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -29,4 +29,11 @@
         android:layout_below="@id/miwok_text_view"
         tools:text="One" />
 
+    <ImageView
+        android:id="@+id/play_image_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:src="@android:drawable/ic_media_play"/>
 </RelativeLayout>
